tests/ui/traits/non_lifetime_binders/drop-impl-pred.no.stderr
warning: the feature `non_lifetime_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/drop-impl-pred.rs:5:12
   |
LL | #![feature(non_lifetime_binders)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0367]: `Drop` impl requires `H: Foo` but the struct it is implemented for does not
  --> $DIR/drop-impl-pred.rs:20:15
   |
LL |     for<H> H: Foo,
   |               ^^^
   |
note: the implementor must specify the same requirement
  --> $DIR/drop-impl-pred.rs:11:1
   |
LL | struct Bar<T>(T) where T: Foo;
   | ^^^^^^^^^^^^^

error[E0282]: type annotations needed
  --> $DIR/drop-impl-pred.rs:16:18
   |
LL | impl<T> Drop for Bar<T>
   |                  ^^^^^^ cannot infer type for struct `Bar<T>`

error: aborting due to 2 previous errors; 1 warning emitted

Some errors have detailed explanations: E0282, E0367.
For more information about an error, try `rustc --explain E0282`.
